--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "homepage": "https://larinart.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "formik": "^2.2.9",
     "notiflix": "^3.2.5",
     "prop-types": "^15.8.1",
