--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "private": true,
   "homepage": "https://larinart.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@reduxjs/toolkit": "^1.8.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "gh-pages": "^4.0.0",
     "notiflix": "^3.2.5",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.0",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
+    "spinners-react": "^1.0.7",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
